--- a/.github/workflows/build-dockerfile.yml
+++ b/.github/workflows/build-dockerfile.yml
@@ -1,36 +1,25 @@
-name: publish
+name: build and publish
 
-on: [push]
-
+on:
+  push:
+    branches: [master]
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 jobs:
-
-publish-hello-docker-image:
-
-runs-on: ubuntu-latest
-
-steps:
-
-- uses: actions/checkout@v2
-
-- name: Login to GitHub Container Registry
-
-uses: docker/login-action@v1
-
-with:
-
-registry: ghcr.io
-
-username: ${{ github.actor }}
-
-password: ${{ secrets.GITHUB_TOKEN }}
-
-- name: Build the hello-docker Docker image
-
-run: |
-
-       docker build . --tag ghcr.io/deselikem/hello-docker-gcr-demo:latest
-
-       docker run ghcr.io/deselikem/hello-docker-gcr-demo:latest
-
-       docker push ghcr.io/deselikem/hello-docker-gcr-demo:latest
+  publish-hello-docker-image:
+    runs-on: ubuntu-latest
+      steps:
+      - uses: actions/checkout@v2
+      - name: Login to GitHub Container Registry
+         uses: docker/login-action@v1
+         with:
+           registry: ${{ env.REGISTRY }}
+           username: ${{ github.actor }}
+           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build the hello-docker Docker image
+        run: |
+              docker build . --tag ghcr.io/vanvonlj/ubuntu-custom:latest
+              docker run ghcr.io/vanvonlj/ubuntu-custom:latest
+              docker push ghcr.io/vanvonlj/ubuntu-custom:latest
 
