--- a/.github/workflows/build-dockerfile.yml
+++ b/.github/workflows/build-dockerfile.yml
@@ -2,7 +2,7 @@ name: build and publish
 
 on:
   push:
-    branches: [master]
+    branches: [main]
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
