update docker file ls for troubleshooting

--- a/.github/workflows/build-dockerfile.yml
+++ b/.github/workflows/build-dockerfile.yml
@@ -19,6 +19,7 @@ jobs:
          password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build Docker image
       run: |
+            echo "Current Directory"
             ls .
             docker build . --tag ghcr.io/vanvonlj/ubuntu-custom:latest
             docker run ghcr.io/vanvonlj/ubuntu-custom:latest
